--- a/home.twig
+++ b/home.twig
@@ -20,7 +20,7 @@
     <section class="main-img-wrap clearfix">
             <div class="widget responsivecolumns columns-two-50-50 front-s">
                 <div class="column columns-two-left front-s1">
-                    {{widget('image', 'front-image', { 'src': asset('images/foto-main.png'), 'alt': '', 'fileName': 'atr.png', 'fileSize': '165kb', 'imageSize': '480px x 320px', 'imageWidth': '480px'})|raw}}
+                    {{widget('image', 'front-image', { 'src': asset('images/foto-main.png'), 'alt': '', 'fileName': 'foto-main.png', 'fileSize': '165kb', 'imageSize': '480px x 320px', 'imageWidth': '480px'})|raw}}
                 </div>
                 <div class="column columns-two-right front-s2">                    
                     {{widget('content', 'front-header', {"content":"<h2>Our people.</h2>"})|raw}}
