--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1026,7 +1026,7 @@ hr.line.align-right {
 }
 .signupform fieldset button{
   padding: 10px 25px;
-  border-color: 1px solid @color-swatch1;
+  border: 1px solid @color-swatch1;
   color: @color-swatch1;
   background: transparent;
 }
