--- a/stylesheet.less
+++ b/stylesheet.less
@@ -266,6 +266,7 @@ footer.bk-footer span {
 .copy-sz{
   background-color: @color-swatch3;
   text-align: right;
+  padding: 1em 0;
 }
 #headercolumn3image, #page-zones__template-widgets__image-headercolumn3image{
   border-top: 1px solid @color-swatch1;
