--- a/stylesheet.less
+++ b/stylesheet.less
@@ -332,12 +332,10 @@ footer.bk-footer span {
    =============================== */
 
 .widget.extendednavigation {
-  float: left;
   position: relative;
 }
 
 .widget.extendednavigation ul {
-  float: left;
   margin: 0;
   padding: 0;
 }
@@ -360,8 +358,7 @@ footer.bk-footer span {
 }
 
 .widget.extendednavigation ul li {
-  float: left;
-  display: block;
+
 }
 .widget.extendednavigation ul li li, .widget.extendednavigation ul li li:hover{
   border: 0;
@@ -374,7 +371,7 @@ footer.bk-footer span {
 }
 
 .widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text {
-  display: block;
+  display: inline-block;
   padding: 9px 25px;
   font-family:@font-swatch6-font-family;
   font-size:@font-swatch6-font-size;
@@ -435,7 +432,7 @@ footer.bk-footer span {
 }
 
 .widget.extendednavigation li:hover > ul > li {
-  display: block;
+  display: inline-block;
   width: 100%;
   text-align: left!important;
   padding: 0;
@@ -1638,7 +1635,7 @@ button .btnText{
     }
 
     .widget.extendednavigation ul li:hover > ul {
-        display: block!important;
+        
         width: 100%;
         border-top: 1px solid @color-swatch3;
         margin: 0;
