--- a/stylesheet.less
+++ b/stylesheet.less
@@ -352,9 +352,7 @@ footer.bk-footer span {
 
 .widget.extendednavigation ul.align-right li, .widget.extendednavigation ul.align-right li:hover ul li
 {
-  background-color: @color-swatch2;
   text-align: right;
-  color: @color-swatch1;
 }
 
 .widget.extendednavigation ul li {
@@ -1015,7 +1013,7 @@ hr.line.align-right {
 }
 
 .widget.signupform fieldset input {
-    height: 40px;
+    height: 48px;
     width: 100%;
     margin-bottom: 10px;
     background-color: @color-swatch3;
@@ -1635,7 +1633,7 @@ button .btnText{
     }
 
     .widget.extendednavigation ul li:hover > ul {
-        
+        display: block!important;
         width: 100%;
         border-top: 1px solid @color-swatch3;
         margin: 0;
