--- a/default.twig
+++ b/default.twig
@@ -12,7 +12,7 @@
   </div>
   <div class="clearfix menu-sz">
     <nav class="wrapper clearfix nav-sz">
-      {{widget('extendednavigation', 'navigationheader', {})|raw}}
+      {{widget('extendednavigation', 'navigationheader', {"align":"left"})|raw}}
     </nav>
   </div>
 </header>
