--- a/stylesheet.less
+++ b/stylesheet.less
@@ -206,8 +206,7 @@ header.bk-header .menu-sz{
 /* COMPANY NAME */
 
 .widget.companyname {
-  display: block;
-  float: left;
+  display: table  ;
   margin-top: 10px;
   a {
     font-size: @font-swatch10-font-size;
@@ -227,8 +226,7 @@ header.bk-header .menu-sz{
 /* LOGO */
 
 .widget.logo {
-  display: block;
-  float: left;
+  display: table;
   margin: 0 10px;
   vertical-align: middle;
 }
@@ -341,19 +339,6 @@ footer.bk-footer span {
 }
 
 /* ALIGNMENTS */
-
-.widget.extendednavigation ul.align-center li, .widget.extendednavigation ul.align-center li:hover ul li {
-  text-align: center;
-}
-.widget.extendednavigation ul.align-left li, .widget.extendednavigation ul.align-left li:hover ul li
-{
-  text-align: left;
-}
-
-.widget.extendednavigation ul.align-right li, .widget.extendednavigation ul.align-right li:hover ul li
-{
-  text-align: right;
-}
 
 .widget.extendednavigation ul li {
 
