--- a/stylesheet.less
+++ b/stylesheet.less
@@ -336,12 +336,14 @@ footer.bk-footer span {
 .widget.extendednavigation ul {
   margin: 0;
   padding: 0;
+  width: 100%;
+  float: none;
 }
 
 /* ALIGNMENTS */
 
 .widget.extendednavigation ul li {
-
+float: none;
 }
 .widget.extendednavigation ul li li, .widget.extendednavigation ul li li:hover{
   border: 0;
