--- a/stylesheet.less
+++ b/stylesheet.less
@@ -344,6 +344,7 @@ footer.bk-footer span {
 
 .widget.extendednavigation ul li {
 float: none;
+display: inline-block;
 }
 .widget.extendednavigation ul li li, .widget.extendednavigation ul li li:hover{
   border: 0;
