--- a/stylesheet.less
+++ b/stylesheet.less
@@ -172,7 +172,7 @@ footer.bk-footer .widget.profile .twitter span {
     text-decoration: none;
     letter-spacing: 1px;
     text-shadow: none;
-    margin-left: 1em;
+    margin-left: 0;
 }
 
 .widget.profile fieldset button.btn:hover {
