--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1723,6 +1723,9 @@ button .btnText{
       width: 100%;
       padding-bottom: 100%;
   }
+  .widget.logo, .widget.companyname{
+    width: 100%;
+  }
 }
 
 @media only screen and (min-width: 1140px) {
