--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1617,7 +1617,7 @@ button .btnText{
     }
 
     .widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text {
-      padding: 10px;
+      padding: 10px 25px;
     }
 
     .widget.extendednavigation ul li:hover > ul {
